update

delete more deployment rbac roles


add test file


delete more codes
