# api/openapi-spec/swagger.json
@@ -355,6 +355,30 @@
         }
       }
     },
+    "kruise.apps.v1alpha1.CompleteResource": {
+      "description": "CompleteResource is used to locate resource",
+      "type": "object",
+      "required": [
+        "kind",
+        "apiVersion",
+        "namespace",
+        "name"
+      ],
+      "properties": {
+        "apiVersion": {
+          "type": "string"
+        },
+        "kind": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "namespace": {
+          "type": "string"
+        }
+      }
+    },
     "kruise.apps.v1alpha1.CompletionPolicy": {
       "description": "CompletionPolicy indicates the completion policy for the job",
       "type": "object",
@@ -380,13 +404,13 @@
       "type": "object",
       "required": [
         "apiVersion",
-        "resource"
+        "kind"
       ],
       "properties": {
         "apiVersion": {
           "type": "string"
         },
-        "resource": {
+        "kind": {
           "type": "string"
         }
       }
@@ -475,18 +499,6 @@
         }
       }
     },
-    "kruise.apps.v1alpha1.Path": {
-      "description": "Path indicates the path",
-      "type": "object",
-      "properties": {
-        "specPath": {
-          "$ref": "#/definitions/kruise.apps.v1alpha1.SpecPath"
-        },
-        "statusPath": {
-          "$ref": "#/definitions/kruise.apps.v1alpha1.StatusPath"
-        }
-      }
-    },
     "kruise.apps.v1alpha1.ManualUpdate": {
       "description": "ManualUpdate is a update strategy which allows users to control the update progress by providing the partition of each subset.",
       "type": "object",
@@ -498,6 +510,18 @@
             "type": "integer",
             "format": "int32"
           }
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.Path": {
+      "description": "Path indicates the path",
+      "type": "object",
+      "properties": {
+        "specPath": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.SpecPath"
+        },
+        "statusPath": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.StatusPath"
         }
       }
     },
@@ -588,11 +612,55 @@
     },
     "kruise.apps.v1alpha1.RolloutControlSpec": {
       "description": "RolloutControlSpec defines the desired state of RolloutControl",
-      "type": "object"
+      "type": "object",
+      "required": [
+        "resource"
+      ],
+      "properties": {
+        "resource": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.CompleteResource"
+        },
+        "rolloutstrategy": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.RolloutStrategy"
+        }
+      }
     },
     "kruise.apps.v1alpha1.RolloutControlStatus": {
       "description": "RolloutControlStatus defines the observed state of RolloutControl",
-      "type": "object"
+      "type": "object",
+      "required": [
+        "replicas",
+        "readyReplicas",
+        "currentReplicas",
+        "updatedReplicas"
+      ],
+      "properties": {
+        "currentReplicas": {
+          "description": "CurrentReplicas is the number of Pods created by the CR controller from the CR version indicated by currentRevision.",
+          "type": "integer",
+          "format": "int32"
+        },
+        "observedGeneration": {
+          "description": "ObservedGeneration is the most recent generation observed for this resource. It corresponds to the resource's generation, which is updated on mutation by the API Server.",
+          "type": "integer",
+          "format": "int64"
+        },
+        "readyReplicas": {
+          "description": "ReadyReplicas is the number of Pods created by the CR controller that have a Ready Condition.",
+          "type": "integer",
+          "format": "int32"
+        },
+        "replicas": {
+          "description": "Replicas is the number of Pods created by the CR controller.",
+          "type": "integer",
+          "format": "int32"
+        },
+        "updatedReplicas": {
+          "description": "UpdatedReplicas is the number of Pods created by the CR controller from the CR version indicated by updateRevision.",
+          "type": "integer",
+          "format": "int32"
+        }
+      }
     },
     "kruise.apps.v1alpha1.RolloutDefinition": {
       "description": "RolloutDefinition is the Schema for the rolloutdefinitions API",
@@ -661,6 +729,25 @@
     "kruise.apps.v1alpha1.RolloutDefinitionStatus": {
       "description": "RolloutDefinitionStatus defines the observed state of RolloutDefinition",
       "type": "object"
+    },
+    "kruise.apps.v1alpha1.RolloutStrategy": {
+      "description": "RolloutStrategy indicates the strategy",
+      "type": "object",
+      "properties": {
+        "maxUnavailable": {
+          "description": "The maximum number of pods that can be unavailable during the update. Value can be an absolute number (ex: 5) or a percentage of desired pods (ex: 10%). Absolute number is calculated from percentage by rounding down. Also, maxUnavailable can just be allowed to work with Parallel podManagementPolicy. Defaults to 1.",
+          "$ref": "#/definitions/io.k8s.apimachinery.pkg.util.intstr.IntOrString"
+        },
+        "partition": {
+          "description": "Partition indicates the ordinal at which the workload should be partitioned. Default value is 0.",
+          "type": "integer",
+          "format": "int32"
+        },
+        "paused": {
+          "description": "Paused indicates that the process is paused. Default value is false",
+          "type": "boolean"
+        }
+      }
     },
     "kruise.apps.v1alpha1.SidecarContainer": {
       "description": "SidecarContainer defines the container of Sidecar",
@@ -786,7 +873,15 @@
         }
       }
     },
-
+    "kruise.apps.v1alpha1.SidecarSetUpdateStrategy": {
+      "description": "SidecarSetUpdateStrategy indicates the strategy that the SidecarSet controller will use to perform updates. It includes any additional parameters necessary to perform the update for the indicated strategy.",
+      "type": "object",
+      "properties": {
+        "rollingUpdate": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.RollingUpdateSidecarSet"
+        }
+      }
+    },
     "kruise.apps.v1alpha1.SpecPath": {
       "description": "SpecPath indicates the spec path",
       "type": "object",
@@ -802,16 +897,6 @@
         "paused": {
           "description": "Paused indicates the paused path of controlled workload",
           "type": "string"
-        }
-      }
-    },
-
-    "kruise.apps.v1alpha1.SidecarSetUpdateStrategy": {
-      "description": "SidecarSetUpdateStrategy indicates the strategy that the SidecarSet controller will use to perform updates. It includes any additional parameters necessary to perform the update for the indicated strategy.",
-      "type": "object",
-      "properties": {
-        "rollingUpdate": {
-          "$ref": "#/definitions/kruise.apps.v1alpha1.RollingUpdateSidecarSet"
         }
       }
     },
