# pkg/controller/rolloutdefinition/rolloutdefinition_controller.go
@@ -18,10 +18,9 @@ package rolloutdefinition
 
 import (
 	"context"
-	"github.com/openkruise/kruise/pkg/controller/rolloutcontrol"
-	"k8s.io/apimachinery/pkg/apis/meta/v1/unstructured"
-
 	appsv1alpha1 "github.com/openkruise/kruise/pkg/apis/apps/v1alpha1"
+	"github.com/openkruise/kruise/pkg/controller/rolloutcontrol"
+	"github.com/openkruise/kruise/pkg/util/gate"
 	"k8s.io/apimachinery/pkg/api/errors"
 	"k8s.io/apimachinery/pkg/runtime"
 	"sigs.k8s.io/controller-runtime/pkg/client"
@@ -35,6 +34,9 @@ import (
 // Add creates a new RolloutDefinition Controller and adds it to the Manager with default RBAC. The Manager will set fields on the Controller
 // and Start it when the Manager is Started.
 func Add(mgr manager.Manager) error {
+	if !gate.ResourceEnabled(&appsv1alpha1.RolloutDefinition{}) {
+		return nil
+	}
 	return add(mgr, newReconciler(mgr))
 }
 
@@ -87,11 +89,10 @@ func (r *ReconcileRolloutDefinition) Reconcile(request reconcile.Request) (recon
 		return reconcile.Result{}, err
 	}
 
-	controlResource := rolloutDef.Spec.ControlResource
-	obj := &unstructured.Unstructured{}
-	obj.SetAPIVersion(controlResource.APIVersion)
-	obj.SetKind(controlResource.Kind)
+	err = rolloutcontrol.DoWatch(&rolloutDef.Spec.ControlResource, r.Client)
+	if err != nil {
+		return reconcile.Result{}, err
+	}
 
-	err = rolloutcontrol.Controller.Watch(&source.Kind{Type: obj}, &enqueueRolloutControlForDefinition{client: r.Client})
 	return reconcile.Result{}, err
 }
